--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,7 +98,7 @@ jobs:
         run: |
           pip install -U -r requirements.txt
           pip install -U nuitka zstandard ordered-set
-          apt install patchelf ccache
+          sudo apt install patchelf ccache
       - name: Build executable
         run: |
           echo VERSION = \"$(git rev-parse HEAD)\" > xdnmb/version.py
