去除Ubuntu打包中没有用到的so

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,6 +105,40 @@ jobs:
           python3 -m nuitka --standalone --assume-yes-for-downloads main.py
           mv main.dist/main main.dist/xdcmd
           chmod +x main.dist/xdcmd
+          rm main.dist/audioop.so
+          rm main.dist/_bisect.so
+          rm main.dist/_bz2.so
+          rm main.dist/_codecs_*.so
+          rm main.dist/_crypt.so
+          rm main.dist/_csv.so
+          rm main.dist/_ctypes.so
+          rm main.dist/_datetime.so
+          rm main.dist/_dbm.so
+          rm main.dist/_decimal.so
+          rm main.dist/_elementtree.so
+          rm main.dist/fcntl.so
+          rm main.dist/grp.so
+          rm main.dist/_heapq.so
+          rm main.dist/libbz2.so.*
+          rm main.dist/libffi.so.*
+          rm main.dist/libgdbm.so.*
+          rm main.dist/libgdbm_compat.so.*
+          rm main.dist/liblzma.so.*
+          rm main.dist/libreadline.so.*
+          rm main.dist/libtinfo.so.*
+          rm main.dist/libuuid.so.*
+          rm main.dist/_lzma.so
+          rm main.dist/mmap.so
+          rm main.dist/_multiprocessing.so
+          rm main.dist/_opcode.so
+          rm main.dist/_pickle.so
+          rm main.dist/_posixshmem.so
+          rm main.dist/_queue.so
+          rm main.dist/readline.so
+          rm main.dist/_sha512.so
+          rm main.dist/_statistics.so
+          rm main.dist/termios.so
+          rm main.dist/_uuid.so
           cp README.md main.dist/README.md
           mv main.dist xdcmd-ubuntu
           XZ_OPT=-9e tar Jcf xdcmd-ubuntu.tar.xz xdcmd-ubuntu
