--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,15 +36,15 @@ jobs:
           'COMMIT_HASH = "' + (git rev-parse HEAD) + '"' | Out-File -Encoding ascii xdnmb/version.py
           nuitka --standalone --assume-yes-for-downloads main.py
           mv main.dist/main.exe main.dist/xdcmd.exe
-          rm -f main.dist/api-ms-win-*.dll
-          rm -f main.dist/ucrtbase.dll
-          rm -f main.dist/_bz2.pyd
-          rm -f main.dist/_decimal.pyd
-          rm -f main.dist/_elementtree.pyd
-          rm -f main.dist/_hashlib.pyd
-          rm -f main.dist/_lzma.pyd
-          rm -f main.dist/_queue.pyd
-          rm -f main.dist/_uuid.pyd
+          rm main.dist/api-ms-win-*.dll
+          rm main.dist/ucrtbase.dll
+          rm main.dist/_bz2.pyd
+          rm main.dist/_decimal.pyd
+          rm main.dist/_elementtree.pyd
+          rm main.dist/_hashlib.pyd
+          rm main.dist/_lzma.pyd
+          rm main.dist/_queue.pyd
+          rm main.dist/_uuid.pyd
           cp README.md main.dist/README.md
       - name: Upload result
         uses: actions/upload-artifact@v3
