--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,18 +36,18 @@ jobs:
           'COMMIT_HASH = "' + (git rev-parse HEAD) + '"' | Out-File -Encoding ascii xdnmb/version.py
           nuitka --standalone --assume-yes-for-downloads main.py
           mv main.dist/main.exe main.dist/xdcmd.exe
-          rm -r main.dist/zstandard
-          rm main.dist/api-ms-win-*.dll
-          rm main.dist/ucrtbase.dll
-          rm main.dist/_asyncio.pyd
-          rm main.dist/_bz2.pyd
-          rm main.dist/_decimal.pyd
-          rm main.dist/_elementtree.pyd
-          rm main.dist/_hashlib.pyd
-          rm main.dist/_lzma.pyd
-          rm main.dist/_multiprocessing.pyd
-          rm main.dist/_queue.pyd
-          rm main.dist/_uuid.pyd
+          rm -r main.dist/zstandard -ErrorAction SilentlyContinue
+          rm main.dist/api-ms-win-*.dll -ErrorAction SilentlyContinue
+          rm main.dist/ucrtbase.dll -ErrorAction SilentlyContinue
+          rm main.dist/_asyncio.pyd -ErrorAction SilentlyContinue
+          rm main.dist/_bz2.pyd -ErrorAction SilentlyContinue
+          rm main.dist/_decimal.pyd -ErrorAction SilentlyContinue
+          rm main.dist/_elementtree.pyd -ErrorAction SilentlyContinue
+          rm main.dist/_hashlib.pyd -ErrorAction SilentlyContinue
+          rm main.dist/_lzma.pyd -ErrorAction SilentlyContinue
+          rm main.dist/_multiprocessing.pyd -ErrorAction SilentlyContinue
+          rm main.dist/_queue.pyd -ErrorAction SilentlyContinue
+          rm main.dist/_uuid.pyd -ErrorAction SilentlyContinue
           cp README.md main.dist/README.md
       - name: Upload result
         uses: actions/upload-artifact@v3
